--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <ul>
         <li><a href="#">Bo’sh ish o’rinlari</a></li>
         <li><a href="#">Biz bilan bog’lanish</a></li>
-        <li><a href="#">Maxfiylik nizomi</a></li>
+        <li><a href="#">Maxfiylik nizommci</a></li>
       </ul>
     </div>
   </footer>
